# s3-tools

./: .gitignore  LICENSE  Readme.md  bucket.json  s3sync.cabal  s3sync.hs
Network/AWS/: Log.hs  Monad.hs  S3Log.hs
Network/AWS/S3Log/: Conduit.hs  Data.hs  Parallel.hs  Parser.hs
S3Logd/: Config.hs  Syslog.hs
S3Logd/Monitor/: Persist.lhs
S3sync/: Git.hs  Logs.hs  S3.hs  Utils.hs
