Name:                s3sync
Version:             0.1.0
Synopsis:            Syncs git repositories with Amazon S3 buckets
Homepage:            https://github.com/matthewSorensen/s3sync
License:             BSD3
License-file:        LICENSE
Author:              Matthew Sorensen
Maintainer:          matthew.d.sorensen@gmail.com
Category:            Network
Build-type:          Simple
Cabal-version:       >=1.2

Library
  Exposed-modules:   Network.AWS.Monad, Network.AWS.S3Log
  Build-depends:     transformers, hS3, conduit >= 0.4.0.1, attoparsec >= 0.10, parallel-io, text, bytestring, old-locale, time, aeson >= 0.6      
  Other-modules:       Network.AWS.S3Log.Parser, Network.AWS.S3Log.Data, Network.AWS.S3Log.Parallel
  
Executable s3sync
  Main-is:             s3sync.hs
  Build-depends:  shelly >= 0.10.0 && < 0.11.0, base, attoparsec >= 0.10, hS3, text, bytestring, zlib, system-filepath, MissingH, cmdargs
  Extensions: OverloadedStrings, TupleSections